# nimbus

./: .gitignore  LICENSE  README.md  docker-compose.yaml
backend/cert_server/app/: Dockerfile  app.py  docker-compose.yaml
backend/data_api/: Dockerfile  README.md  app.py  docker-compose.yaml  requirements.txt  test.py  utils.py
backend/mqttLogger/: Dockerfile  compose.yaml  mqttLogger.py
backend/secrets_db/: init.sql
backend/weather/weather/: settings.py  urls.py
frontend/: Dockerfile  compose.yaml
frontend/admin_dashboard/: Dockerfile  app.py
frontend/admin_dashboard/static/: index.html
frontend/dash/: app.py  app2.py  queries.py  requirements.txt  utils.py
pcb/nimbus_pcb_2/: fp-info-cache  nimbus_pcb_2.kicad_pcb  nimbus_pcb_2.kicad_prl  nimbus_pcb_2.kicad_pro  nimbus_pcb_2.kicad_sch  nimbus_pcb_2.kicad_sch-bak  nimbus_symbols.kicad_sym
pcb/symbols/: my_symbols.bak
station-scripts/esp32_supermini_ssl/: esp32_supermini_ssl.ino  esp32_utilities.h
station-scripts/esp32s2_arduino/: esp32_utilities.h  esp_ulp_bmp_aht_no_mqtt.ino  ulp_program.h
station-scripts/esp32s2_native/: .gitignore
station-scripts/esp32s2_native/main/: CMakeLists.txt  config.h.template  https_client.c  https_client.h  idf_component.yml  main.c  sensors.c  sensors.h  wifi.c  wifi.h
station-scripts/esp32s2_native/main/ulp/: main.c
station-scripts/esp_c3/: esp32_utilities.h  esp_c3.ino  esp_c3_no_mqtt.ino  secrets.h  ulp_program.h
station-scripts/esp_ulp_bmp_aht/: esp32_utilities.h  esp_ulp_bmp_aht .ino.txt  esp_ulp_bmp_aht.ino  ulp_program.h
(+27 files in other folders)
